<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.playerlisting.MainActivity" >

    <EditText
        android:id="@+id/edtPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_hint"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/grpPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/radGoalie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/goalie" />

        <RadioButton
            android:id="@+id/radDefence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defence" />

        <RadioButton
            android:id="@+id/radForward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/goals_hint"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="savePlayer"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="viewPlayers"
            android:text="@string/view_button" />
    </LinearLayout>

</LinearLayout>